got gaps to be correct based off of which the bigger stack is!

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -25,7 +25,7 @@ body {
   }
 
   50% {
-    transform: translateY(-20px);
+    transform: translateY(-10px);
   }
 
   100% {
